Bug 1629220 - When partially compositing into native layers with BasicCompositor, allow only one invalid rect per layer, and store the invalid rect on the render target instead of pushing a clip to the DrawTarget. r=mattwoodrow

This matches what we do in CompositorOGL.

This avoids having clipping state stored on the render target's DrawTarget.
As a result, we have access to the combined device clip rect in DrawGeometry,
and the video scale fast paths can observe the correct clip even though they
bypass the DrawTarget machinery.

This fixes flickering bugs caused by the video scale fast path in the native
layers configuration, i.e. on macOS only. We probably still have bugs on the
other platforms. It's possible that this bug is less observable on other
platforms due to additional copies of the invalid region, and those copies
ignore the bad content outside the invalid region.

Differential Revision: https://phabricator.services.mozilla.com/D86608