gfx/layers/basic/BasicCompositor.cpp
@@ -666,6 +666,10 @@ void BasicCompositor::DrawGeometry(
   // offset can be anywhere.
   IntRect clipRectInRenderTargetSpace =
       aClipRect + mRenderTarget->GetClipSpaceOrigin();
+  if (Maybe<IntRect> rtClip = mRenderTarget->GetClipRect()) {
+    clipRectInRenderTargetSpace =
+        clipRectInRenderTargetSpace.Intersect(*rtClip);
+  }
   buffer->PushClipRect(Rect(clipRectInRenderTargetSpace));
   Rect deviceSpaceClipRect(clipRectInRenderTargetSpace - offset);
 
@@ -1022,19 +1026,26 @@ Maybe<gfx::IntRect> BasicCompositor::BeginRenderingToNativeLayer(
     const nsIntRegion& aOpaqueRegion, NativeLayer* aNativeLayer) {
   IntRect rect = aNativeLayer->GetRect();
 
+  // We only support a single invalid rect per native layer. This is a
+  // limitation that's imposed by the AttemptVideo[ConvertAnd]Scale functions,
+  // which require knowing the combined clip in DrawGeometry and can only handle
+  // a single clip rect.
+  IntRect invalidRect;
   if (mShouldInvalidateWindow) {
-    mInvalidRegion = rect;
+    invalidRect = rect;
   } else {
-    mInvalidRegion.And(aInvalidRegion, rect);
+    IntRegion invalidRegion;
+    invalidRegion.And(aInvalidRegion, rect);
+    if (invalidRegion.IsEmpty()) {
+      return Nothing();
+    }
+    invalidRect = invalidRegion.GetBounds();
   }
-
-  if (mInvalidRegion.IsEmpty()) {
-    return Nothing();
-  }
+  mInvalidRegion = invalidRect;
 
   RefPtr<CompositingRenderTarget> target;
   aNativeLayer->SetSurfaceIsFlipped(false);
-  IntRegion invalidRelativeToLayer = mInvalidRegion.MovedBy(-rect.TopLeft());
+  IntRegion invalidRelativeToLayer = invalidRect - rect.TopLeft();
   RefPtr<DrawTarget> dt = aNativeLayer->NextSurfaceAsDrawTarget(
       gfx::IntRect({}, aNativeLayer->GetSize()), invalidRelativeToLayer,
       BackendType::SKIA);
@@ -1050,20 +1061,17 @@ Maybe<gfx::IntRect> BasicCompositor::BeginRenderingToNativeLayer(
   MOZ_RELEASE_ASSERT(target);
   SetRenderTarget(target);
 
-  gfxUtils::ClipToRegion(mRenderTarget->mDrawTarget, mInvalidRegion);
-
-  mRenderTarget->mDrawTarget->PushClipRect(Rect(aClipRect.valueOr(rect)));
+  IntRect clipRect = invalidRect;
+  if (aClipRect) {
+    clipRect = clipRect.Intersect(*aClipRect);
+  }
+  mRenderTarget->SetClipRect(Some(clipRect));
 
   return Some(rect);
 }
 
 void BasicCompositor::EndRenderingToNativeLayer() {
-  // Pop aClipRect/bounds rect
-  mRenderTarget->mDrawTarget->PopClip();
-
-  // Pop mInvalidRegion
-  mRenderTarget->mDrawTarget->PopClip();
-
+  mRenderTarget->SetClipRect(Nothing());
   SetRenderTarget(mNativeLayersReferenceRT);
 
   MOZ_RELEASE_ASSERT(mCurrentNativeLayer);
